Use query params to sort tasks instead of url params (#61)
