# pkg/routes/routes.go
@@ -242,8 +242,6 @@ func RegisterRoutes(e *echo.Echo) {
 	}
 	a.PUT("/lists/:list", taskHandler.CreateWeb)
 	a.GET("/tasks/all", taskHandler.ReadAllWeb)
-	a.GET("/tasks/all/:sort", taskHandler.ReadAllWeb)
-	a.GET("/tasks/all/:sort/:startdatefilter/:enddatefilter", taskHandler.ReadAllWeb)
 	a.DELETE("/tasks/:listtask", taskHandler.DeleteWeb)
 	a.POST("/tasks/:listtask", taskHandler.UpdateWeb)
 
